Fix empty sign crash.